syntax = "proto3";
package wikipedia;

option go_package = "github.com/atye/wikitable-api/service/pb";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Wikipedia Table JSON API";
    };
};

message Row {
    map<int64, string> columns = 1;
}

message Table {
    string caption = 1;
    map<int64, Row> rows = 2;
}

message TablesRequest {
    string page = 1;
    string lang = 2;
    repeated int32 table = 3;
}

message TablesResponse {
    repeated Table tables = 1;
}

service WikiTableJSONAPI {
    rpc GetTables(TablesRequest) returns (TablesResponse) {
        option (google.api.http) = {
            get: "/api/v2/{page=**}"
        };
    }
}